update system design

--- a/_posts/2016-1-7-design.md
+++ b/_posts/2016-1-7-design.md
@@ -4,3 +4,45 @@ title: 总结(VII) Design review --- 设计题目总结
 tags:
 - Algorithm Summary
 ---
+基本上看到哪里就记到哪里吧，看到高频的就记一下。
+
+### 洗牌算法
+这个有意思了，以前重来没想过这个问题。有些公司会问你怎么去设计ipod，然后重点问你怎么去设计随机播放。尽可能有少的资源，而且不会有重复的。当然，简单地调用ramdon估计就是回被提出去的了。然后在网上看到一个简单的解法，先记下，有空再去深究：
+
+####code[java]
+{% highlight java %}
+public class Shuffle {
+    public static void main(String arg[]){  
+        String[] musicUrl={"/music/1.mp3",  
+                "/music/2.mp3",  
+                "/music/3.mp3",  
+                "/music/4.mp3",  
+                "/music/5.mp3",  
+                "/music/6.mp3",  
+                "/music/7.mp3",  
+                "/music/8.mp3",  
+                "/music/9.mp3",  
+                "/music/10.mp3"};  
+          
+        shuffle(musicUrl);  
+        for(String music:musicUrl){  
+            System.out.println(music);  
+        }  
+    }  
+    public static void shuffle(String[] musicUrl){  
+        int shuffle_key;  
+        String temp;  
+        Random rand = new Random();  
+          
+        for(int i = 0; i < musicUrl.length; i++){  
+            shuffle_key = rand.nextInt(musicUrl.length-1);  
+            temp = musicUrl[i];  
+            musicUrl[i] = musicUrl[shuffle_key];  
+            musicUrl[shuffle_key] = temp;  
+        }  
+    }  
+}
+
+{% endhighlight %}
+
+***
