--- a/_posts/2016-1-7-design.md
+++ b/_posts/2016-1-7-design.md
@@ -204,3 +204,40 @@ public class WordDictionary {
 
 {% endhighlight %}
 
+***
+
+### Suppose you have a logger class that is used to log error and warning messages. How can you implement this class while using the Singleton design pattern?
+
+这题也是考察基本的Singleton方法。既然我们只能产生一个实例，那么，只能够将构造函数设为privete. 换句话说,外部是没办法通过构造函数创建实例.所以,我们只会产生一个实例在类的内部当中.
+
+####code[java]
+{% highlight java %}
+// Implements a simple logging class using a singleton.
+public class Logging {
+
+    // this creates the actual Singleton instance
+    private static final Logging singletonInstance = new Logging();
+
+    /*
+     * Private constructor prevents others from instantiating this class:
+     */
+    private Logging() {
+    }
+
+    // this method returns the singleton instance
+    public static Logging getSingleton() {
+        return singletonInstance;
+    }
+
+    /*
+     * This will print a message to the screen: sample call:
+     * Logging.getSingleton().log("testing message");
+     */
+
+    public void log(String message) {
+        System.out.println(System.currentTimeMillis() + ": " + message);
+    }
+}
+
+{% endhighlight %}
+
